--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.3",
     "openai": "^4.19.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modern-audio-player": "^1.4.0-rc.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
