--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "next": "14.0.3",
     "openai": "^4.19.1",
     "react": "^18",
-    "react-dom": "^18",
-    "react-modern-audio-player": "^1.4.0-rc.2"
+    "react-audio-visualize": "^1.1.3",
+    "react-audio-voice-recorder": "^2.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "18.2.79",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
