--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.20.8",
     "dotenv": "^16.3.1",
     "next": "14.0.3",
     "openai": "^4.19.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tmp": "^0.2.3"
   },
   "devDependencies": {
     "@types/react": "18.2.79",
