--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.8",
+    "abort-controller": "^3.0.0",
     "dotenv": "^16.3.1",
     "next": "14.0.3",
     "openai": "^4.19.1",
     "pm2": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "tmp": "^0.2.3"
   },
   "devDependencies": {
