Changed to array of messages returned over API not result_pair; compliance check addd to PapaReo API use

--- a/public/interface-config.json
+++ b/public/interface-config.json
@@ -2,9 +2,9 @@
     "lang"          : "en",
 
     "params": {
-	"speechToText"  : "fake",
-	"chatLLM"       : "fake",
-	"textToSpeech"  : "fake"	
+	"speechToText"  : "OpenAI",
+	"chatLLM"       : "OpenAI",
+	"textToSpeech"  : "OpenAI"	
     },
 
     "interfaceText" : {
