Initial cut at generating a new interface language

--- a/public/interface-config.json
+++ b/public/interface-config.json
@@ -7,6 +7,8 @@
 	"textToSpeech"  : "OpenAI"	
     },
 
+    "interfaceLangs": [ "en", "mi" ],
+    
     "interfaceText" : {
 	"_howCanIHelp_": {
 	    "en": "How can I help?",
